<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.PanelActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/Theme.ClienteTwitter">

    <TextView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/funcionalidades"
        android:textAlignment="center"
        android:textColor="@color/twitter_blue"
        android:textSize="40sp" />

    <Button
        android:id="@+id/sendTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviarTweet"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="15sp"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondeado" />

    <Button
        android:id="@+id/ajustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:layout_marginVertical="15sp"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondeado" />

    <Button
        android:id="@+id/verTweets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verTweets"
        android:layout_marginVertical="15sp"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondeado" />
</LinearLayout>