<LinearLayout
    android:id="@+id/sendStatusActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.ClienteTwitter"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/actualizar_estado"
        android:textSize="30sp"
        android:textColor="@color/twitter_blue"
        android:background="@color/white" />

    <EditText
        android:id="@+id/editStatus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:hint="@string/hint_status"
        android:background="@color/white"
        android:textColor="@color/twitter_blue"
        android:textColorHint="@color/twitter_blue"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text=""
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonTweet"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_tweet"
        android:textSize="20sp" />

</LinearLayout>